Add shorteners
