# docs/swagger.yaml
@@ -15,6 +15,24 @@ info:
   version: "1.0"
 paths:
   /shortener:
+    delete:
+      consumes:
+      - application/json
+      description: test
+      parameters:
+      - description: url
+        in: body
+        name: message
+        required: true
+        schema:
+          $ref: '#/definitions/models.URL'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: string
     patch:
       consumes:
       - application/json
@@ -62,6 +80,18 @@ paths:
         name: path
         required: true
         type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: string
+  /shorteners:
+    get:
+      consumes:
+      - application/json
+      description: test
       produces:
       - application/json
       responses:
