# router/router.go
@@ -2,23 +2,13 @@ package router
 
 import (
 	"Go-Gin-practice/apis"
-	"Go-Gin-practice/core"
 	_ "Go-Gin-practice/docs" // docs is generated by Swag CLI, you have to import it.
-	"Go-Gin-practice/global"
-	"Go-Gin-practice/initialize"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-func init_db() {
-	initialize.DBTables()
-	defer global.GVA_DB.Close()
-	core.Init()
-}
-
 func SetupRouter() *gin.Engine {
-	init_db()
 	router := gin.Default()
 	api_v1 := router.Group("/api/v1")
 	{
@@ -27,6 +17,11 @@ func SetupRouter() *gin.Engine {
 			shortener.GET("/:path", v1.GetURL)
 			shortener.POST("", v1.CreateURL)
 			shortener.PATCH("", v1.UpdateURL)
+			shortener.DELETE("", v1.DeleteURL)
+		}
+		shorteners := api_v1.Group("/shorteners")
+		{
+			shorteners.GET("", v1.GetURLList)
 		}
 	}
 	url := ginSwagger.URL("http://localhost:8080/swagger/doc.json") // The url pointing to API definition
